# error

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
.circleci/: config.yml
doc/: jack_error
doc/html/: annotated.html  classes.html  classjack_1_1error-members.html  classjack_1_1error.html  classjack_1_1reason-members.html  classjack_1_1reason.html  dir_6897d2f5bfcbefb584a8a8a68742fff3.html  dir_d44c64559bbebec7f509842c48db8b23.html  error_8hpp_source.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html  menudata.js
doc/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  functions_2.js  functions_4.js  searchdata.js  variables_0.js  variables_1.js
doc/latex/: annotated.tex  classjack_1_1error.tex  classjack_1_1reason.eps  classjack_1_1reason.tex  error_8hpp_source.tex  files.tex  hierarchy.tex  refman.tex
examples/: CMakeLists.txt  a.out  ex0.cpp  ex1.cpp  makefile
include/jack/: error.hpp
test/: CMakeLists.txt  error.cpp  reason.cpp
